# Cool-Cats

./: AllCitizenIterator.cpp  BasicStructure.cpp  BasicStructure.h  CMakeLists.txt  CStructIterator.cpp  CStructIterator.h  CStructureGroup.cpp  CStructureGroup.h  Cargo.h  Citizen.cpp  Citizen.h  CitizenIterator.h  CityResourceMediator.cpp  CityResourceMediator.h  ConcreteObserver.cpp  Creator.h  Energy.h  Freight.cpp  Government.cpp  Government.h  GovernmentInvoker.h  HighCitizen.cpp  HighCitizen.h  HighCitizenCreator.cpp  Income.cpp  Income.h  LowCitizen.h  LowCitizenCreator.cpp  MaintenanceCostReducer.h  Makefile  Materials.cpp  Materials.h  Mayor.cpp  Mayor.h  MayorCreator.cpp  MayorCreator.h  MayorIterator.cpp  MayorIterator.h  Metro.cpp  Metro.h  (+40 more)
Build+Trans/: Building main.cpp  CStructIterator.cpp  ResourceEfficiencyEnhancer.h  StructureDecorator.cpp  StructureDecorator.h
Buildings/: BasicStructure.cpp  MaintenanceCostReducer.h  Structure.h  StructureDecorator.h  StructureGroup.cpp  StructureGroup.h  main.cpp  makefile
Citizen/: AllCitizenIterator.cpp  AllCitizenIterator.h  Citizen.cpp  Citizen.h  CitizenIterator.h  Creator.cpp  Creator.h  HighCitizen.cpp  HighCitizen.h  Income.cpp  Income.h  LowCitizen.cpp  LowCitizen.h  LowCitizenCreator.cpp  LowCitizenCreator.h  Mayor.cpp  Mayor.h  MayorCreator.cpp  MayorCreator.h  MayorIterator.cpp  MayorIterator.h  MiddleCitizen.cpp  MiddleCitizen.h  MiddleCitizenCreator.cpp  MiddleCitizenCreator.h  makefile
Data Folder/Vpp files/: Cool cats uml.vpp
System/: AirportTransport.cpp  AllCitizenIterator.h  BasicStructure.h  Budget.cpp  Budget.h  BudgetAllocationCommand.h  CStructIterator.cpp  ConcreteObserver.cpp  Creator.cpp  Creator.h  Freight.h  Government.cpp  Government.h  GovernmentInvoker.cpp  HighCitizen.cpp  HighCitizen.h  LowCitizen.cpp  Mayor.h  MiddleCitizen.h  PolicyImplementationCommand.cpp  PolicyImplementationCommand.h  PowerUtility.h  Road.cpp  RoadSubject.h  SewageUtility.cpp  SewageUtility.h  Structure.h  StructureDecorator.h  TaxMemento.cpp  TaxMemento.h  Taxes.cpp  Taxes.h  Taxi.h  Tram.cpp  Utilities.h  WasteUtility.cpp  WasteUtility.h  Water.cpp  Working.cpp  main  (+1 more)
Tests/: AllCitizenIteratorTest.cpp  BasicStructureTest.cpp  CityResourceMediatorTest.cpp  CreatorTest.cpp  GovernmentTest.cpp  HighCitizenTest.cpp  LowCitizenTest.cpp  MayorIteratorTest.cpp  MayorTest.cpp  MiddleCitizenTest.cpp  StructureGroupTest.cpp  TaxMementoTest.cpp  TaxesTest.cpp  UtilitiesTest.cpp
Transport+Building/: AirVehicle.gcno  AirVehicle.h  AirportTransport.cpp  AirportTransport.gcno  AirportTransport.h  BasicStructure.cpp  BasicStructure.gcno  BasicStructure.h  Bus.cpp  Bus.gcno  Bus.h  CStructIterator.cpp  CStructIterator.gcno  Cargo.cpp  Cargo.gcno  Citizen.h  ConcreteObserver.cpp  ConcreteObserver.gcno  Freight.cpp  Freight.gcno  Freight.h  HighCitizenCreator.h  MaintenanceCostReducer.gcno  Metro.cpp  Metro.gcno  Metro.h  Passenger.cpp  Passenger.gcno  Passenger.h  PublicTransport.cpp  PublicTransport.gcno  PublicTransport.h  PublicVehicle.gcno  ResourceEfficiencyEnhancer.cpp  ResourceEfficiencyEnhancer.gcno  ResourceMediator.h  Road.cpp  Road.gcno  Road.h  RoadState.gcno  (+27 more)
Transport+Building+Citizen/: makefile.txt
Transport+Building+Citizen/Citizen/: AllCitizenIterator.h  HighCitizenCreator.h  LowCitizenCreator.h  MayorIterator.h
Transport+Building+Citizen/Transport+Building/: BasicStructure.h  Citizen.h  CitizenIterator.h  HighCitizen.h  MayorCreator.h  SatisfactionEnhancer.h  StructureGroup.cpp  TrainVehicle.cpp  Working.cpp  Working.h  main.cpp  makefile
TransportFiles/: AirportTransport.h  Bus.gcda  Bus.gcno  Cargo.cpp  ConcreteObserver.cpp  Passenger.cpp  PublicTransport.gcda  PublicTransport.gcno  PublicVehicle.cpp  PublicVehicle.gcda  PublicVehicle.gcno  Road.h  Transport.gcda  Transport.gcno  Transportation.cpp  Transportation.gcda  Transportation.gcno  Transportation.h  main  main.cpp  main.gcda  main.gcno  makefile
Utilities/: Makefile  PowerUtility.cpp  PowerUtility.h  Utilities.cpp  Utilities.h  WaterUtility.cpp  WaterUtility.h
docs/: Doxyfile
everything/: AllCitizenIterator.h  BasicStructure.cpp  Citizen.cpp  Creator.cpp  HighCitizenCreator.cpp  HighCitizenCreator.h  LowCitizen.cpp  MaintenanceCostReducer.cpp  Makefile  MiddleCitizenCreator.h  PublicVehicle.h  ResourceEfficiencyEnhancer.h  Road.cpp  Structure.h  StructureDecorator.cpp  StructureDecorator.h  StructureGroup.cpp  WaterUtility.cpp  main  main.cpp
everything/docs/: Doxyfile.bak
everythingKhomotjosVersion/: AirVehicle.cpp  AirVehicle.h  AirportTransport.cpp  Bus.cpp  CStructIterator.h  Citizen.h  CitizenIterator.cpp  CityResourceMediator.cpp  CityResourceMediator.h  ConcreteObserver.h  Creator.h  Energy.cpp  Energy.h  HighCitizen.cpp  Income.h  LowCitizenCreator.cpp  Makefile  Materials.cpp  Passenger.h  PowerUtility.h  PublicTransport.cpp  PublicTransport.h  README.md  SatisfactionEnhancer.cpp  SatisfactionEnhancer.h  StructureGroup.h  Taxi.h  TrainTransport.h  Tram.cpp  Transport.cpp
everythingKhomotjosVersion/docs/: Doxyfile
gov-resources with main/: CityResourceMediator.cpp  CityResourceMediator.h  Energy.cpp  Energy.h  Government.cpp  Government.h  GovernmentInvoker.cpp  GovernmentInvoker.h  Materials.cpp  PolicyCommand.h  ResourceMediator.h  TaxationCommand.h  Water.cpp  Water.h  main.cpp  makefile
government/: BudgetAllocationCommand.cpp  CityResourceMediator.cpp  Command.h  ConcreteMediator.cpp  ConcreteMediator.h  Energy.cpp  Government.cpp  Government.h  GovernmentColleague.h  GovernmentCommand.h  GovernmentInvoker.cpp  GovernmentInvoker.h  GovernmentMediator.h  Materials.h  PolicyCommand.cpp  PolicyImplementationCommand.cpp  TaxMemento.cpp  TaxMemento.h  TaxationCommand.cpp  TaxationCommand.h  Taxes.cpp  Taxes.h  Water.cpp  main.cpp  makefile  program  tempCodeRunnerFile.cpp
resources/: CityResourceMediator.cpp  Energy.cpp  Energy.h  Materials.cpp  Materials.h  Water.cpp  Water.h
tests/: AllCitizenIteratorTest.cpp  CreatorTest.cpp  HighCitizenTest.cpp  LowCitizenTest.cpp  MayorTest.cpp  MiddleCitizenTest.cpp
(+1 files in other folders)
